--- a/apple.html
+++ b/apple.html
@@ -3,11 +3,12 @@
 <head>
 	<meta charset="UTF-8">
 	<title>iphone</title>
+	<meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
+
 	<script src="js/jquery 3.3.1.js"></script>
 	<link rel="stylesheet" href="css/apple.css">
 	<link rel="stylesheet" href="https://at.alicdn.com/t/font_779532_8wn89itot9o.css">
 	<!--<link rel="stylesheet" href="https://at.alicdn.com/t/font_838657_c2tgyl6nof.css">-->
-
 	<script src="js/apple.js"></script>
 
 
