--- a/apple.html
+++ b/apple.html
@@ -30,7 +30,7 @@
 		<a href="" class="text">技术支持</a>
 		<a href="" class="sea"><i class="iconfont icon-search"></i></a>
 <!-- 		<a href="" class="vgf"><i class="iconfont icon-pingguo1"></i></a> -->
-		<a href=""><i class="iconfont icon-gouwudai101"></i></a>
+		<a href="javascript:;"><i class="iconfont icon-gouwudai101"></i></a>
 	</header>
 	<div class="lis">
 		<div class="inp">
@@ -44,6 +44,17 @@
 			<div class="list">Music</div>
 			<div class="list">技术支持</div>
 		</div>
+	</div>
+	<div class="fang"></div>
+	<div class="shop">
+
+		<div class="fir">你的购物袋是空的</div>
+		<div class="sec">购物袋</div>
+		<div class="sec">收藏</div>
+		<div class="sec">订单</div>
+		<div class="sec">账户</div>
+		<div class="sec">登录</div>
+
 	</div>
 	<div class="iphoneX">
 		<h2>iPhoneX</h2>
